<resources>
    <string name="app_name">ikonnectmobile</string>
    <string name="back_button_description">Retour</string>
    <string name="discussion_icon_description">Avatar</string>
    <string name="permission_denied_icon_desc">Toutes les permissions sont requises pour le bonne fonctionnnement de cette application.</string>
    <string name="go_to_settings">Aller aux paramètres</string>
    <string name="call_icon">Appel</string>
    <string name="appel">Appel</string>
    <string name="permission_denied_text">Permission non accordé</string>
    <string name="effacer">Effacer</string>

    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="asterisk">*</string>
    <string name="dièse">#</string>

</resources>
