<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:singleLine="true"
        android:ellipsize="none"
        android:scrollHorizontally="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="@+id/container_keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Ligne 1 -->
        <Button
            android:id="@+id/btn_number_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/un"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/deux"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_3"
            app:layout_constraintStart_toEndOf="@id/btn_number_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/trois"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_number_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33" />

        <!-- Ligne 2 -->
        <Button
            android:id="@+id/btn_number_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/quatre"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_1"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/cinq"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_6"
            app:layout_constraintStart_toEndOf="@id/btn_number_4"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_2"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/six"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_number_5"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_3"
            app:layout_constraintWidth_percent="0.33" />

        <!-- Ligne 3 -->
        <Button
            android:id="@+id/btn_number_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/sept"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_4"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/huit"
            app:layout_constraintEnd_toStartOf="@+id/btn_number_9"
            app:layout_constraintStart_toEndOf="@id/btn_number_7"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_5"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/neuf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_number_8"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_6"
            app:layout_constraintWidth_percent="0.33" />

        <!-- Ligne 4 avec le bouton Appel et Effacer -->
        <Button
            android:id="@+id/btn_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/asterisk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_7"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_number_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_hash"
            app:layout_constraintStart_toEndOf="@id/btn_star"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_8"
            app:layout_constraintWidth_percent="0.33" />

        <Button
            android:id="@+id/btn_hash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/dièse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_number_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_9"
            app:layout_constraintWidth_percent="0.33" />

        <!-- Bouton d'appel -->
        <Button
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/appel"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_0"
            app:layout_constraintWidth_percent="0.5" />

        <!-- Bouton d'effacement -->
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/effacer"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_number_0"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
