<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/deniedIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_permission_denied"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/deniedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/permission_denied_icon_desc" />

    <TextView
        android:id="@+id/deniedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:text="@string/permission_denied_text"
        app:layout_constraintTop_toBottomOf="@id/deniedIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/goToSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_settings"
        app:layout_constraintTop_toBottomOf="@id/deniedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="openAppSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>
